--- a/package.json
+++ b/package.json
@@ -40,19 +40,19 @@
     "@react-native-library/webserver": "^1.0.3",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-native-segmented-control/segmented-control": "^2.4.0",
-    "@react-navigation/bottom-tabs": "^6.5.5",
-    "@react-navigation/native": "^6.1.4",
-    "@react-navigation/native-stack": "^6.9.10",
-    "@react-navigation/stack": "^6.3.14",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
     "@rn-kit/sqlite": "^6.0.3",
-    "@sentry/react-native": "^4.15.0",
+    "@sentry/react-native": "^5.1.1",
     "@shopify/flash-list": "^1.4.1",
     "@tanstack/react-query": "^4.24.4",
     "axios": "^1.2.1",
     "burnt": "0.9.0",
     "colord": "^2.9.3",
     "dayjs": "^1.11.7",
-    "expo": "^47.0.13",
+    "expo": "^48.0.7",
     "expo-application": "^5.0.1",
     "expo-constants": "^14.0.2",
     "expo-device": "^5.0.0",
@@ -108,7 +108,7 @@
     "react-native-permissions": "^3.6.1",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-quick-sqlite": "^6.1.0",
-    "react-native-reanimated": "^3.0.0-rc.10",
+    "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-sfsymbols": "^1.2.1",
