--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@rn-kit/sqlite": "^6.0.3",
-    "@sentry/react-native": "^5.1.1",
+    "@sentry/react-native": "^5.3.0",
     "@shopify/flash-list": "^1.4.1",
     "@tanstack/react-query": "^4.24.4",
     "axios": "^1.2.1",
@@ -73,14 +73,14 @@
     "lodash": "^4.17.21",
     "lottie-react-native": "^5.1.4",
     "mime": "^3.0.0",
-    "mobx": "6.6.0",
-    "mobx-react-lite": "3.4.0",
-    "mobx-state-tree": "5.1.5",
+    "mobx": "^6.9.0",
+    "mobx-react-lite": "^3.4.3",
+    "mobx-state-tree": "^5.1.8",
     "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-airplay": "^1.2.0",
     "react-fast-compare": "^3.2.0",
-    "react-native": "^0.71.4",
+    "react-native": "^0.71.5",
     "react-native-actions-sheet": "^0.8.21",
     "react-native-app-toolkit": "^1.1.0",
     "react-native-awesome-slider": "^2.3.0",
@@ -101,24 +101,24 @@
     "react-native-ios-context-menu": "^1.15.1",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-localize": "^2.2.4",
-    "react-native-mmkv": "2.5.1",
+    "react-native-mmkv": "^2.6.3",
     "react-native-orientation-locker": "^1.5.0",
     "react-native-override-color-scheme": "^1.0.3",
     "react-native-pager-view": "6.0.0-rc.2",
-    "react-native-permissions": "^3.6.1",
+    "react-native-permissions": "^3.8.0",
     "react-native-qrcode-svg": "^6.1.2",
-    "react-native-quick-sqlite": "^6.1.0",
+    "react-native-quick-sqlite": "6.1.0",
     "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-sfsymbols": "^1.2.1",
     "react-native-shake": "^5.1.1",
     "react-native-share": "^8.2.0",
-    "react-native-svg": "^13.8.0",
+    "react-native-svg": "^13.9.0",
     "react-native-version-check": "^3.4.7",
     "react-native-video": "6.0.0-alpha.4",
     "react-native-zip-archive": "^6.0.9",
-    "rxjs": "^7.6.0",
+    "rxjs": "^7.8.0",
     "typeorm": "^0.3.12",
     "use-deep-compare-effect": "^1.8.1",
     "uuid": "^9.0.0",
