--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "expo-status-bar": "~1.4.0",
     "expo-store-review": "^6.0.0",
     "ffmpeg-kit-react-native": "^5.1.0",
-    "i18next": "^22.0.4",
+    "i18next": "^22.4.15",
     "iconoir-react-native": "^5.4.0",
     "lodash": "^4.17.21",
     "lottie-react-native": "^5.1.4",
@@ -81,14 +81,14 @@
     "react-airplay": "^1.2.0",
     "react-fast-compare": "^3.2.0",
     "react-native": "^0.71.7",
-    "react-native-actions-sheet": "^0.8.21",
+    "react-native-actions-sheet": "^0.8.29",
     "react-native-app-toolkit": "^1.1.0",
-    "react-native-awesome-slider": "^2.3.0",
-    "react-native-bootsplash": "^4.4.2",
+    "react-native-awesome-slider": "^2.4.0",
+    "react-native-bootsplash": "^4.6.0",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-classify-image": "^1.2.0",
     "react-native-cloud-store": "^0.9.1",
-    "react-native-device-info": "^10.3.0",
+    "react-native-device-info": "^10.6.0",
     "react-native-document-picker": "^8.2.0",
     "react-native-dynamic-app-icon": "^1.1.0",
     "react-native-fast-image": "^8.6.3",
@@ -100,16 +100,16 @@
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-ios-context-menu": "^1.15.1",
     "react-native-linear-gradient": "^2.6.2",
-    "react-native-localize": "^2.2.4",
-    "react-native-mmkv": "^2.6.3",
+    "react-native-localize": "3.0.0",
+    "react-native-mmkv": "^2.8.0",
     "react-native-orientation-locker": "^1.5.0",
     "react-native-override-color-scheme": "^1.0.3",
     "react-native-pager-view": "6.0.0-rc.2",
     "react-native-permissions": "^3.8.0",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-quick-sqlite": "6.1.0",
-    "react-native-reanimated": "^3.0.2",
-    "react-native-safe-area-context": "^4.5.0",
+    "react-native-reanimated": "^3.1.0",
+    "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
     "react-native-sfsymbols": "^1.2.1",
     "react-native-shake": "^5.1.1",
