--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,8 +7,6 @@ require File.join(File.dirname(`cd #{pod_folder} && node --print "require.resolv
 platform :ios, '14.0'
 install! 'cocoapods', :deterministic_uuids => false
 
-# 避免使用 IDFA
-$RNFirebaseAnalyticsWithoutAdIdSupport = true
 # 使用嵌入式 SQLite
 $QUICK_SQLITE_USE_PHONE_VERSION = 1
 
@@ -55,5 +53,10 @@ target 'PrivacyBox' do
       )
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
     File.delete("./.xcode.env.local") if File.exist?("./.xcode.env.local")
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)', '_LIBCPP_ENABLE_CXX17_REMOVED_UNARY_BINARY_FUNCTION']
+      end
+    end
   end
 end
