--- a/package.json
+++ b/package.json
@@ -33,17 +33,14 @@
     "@react-native-community/blur": "^4.3.0",
     "@react-native-community/hooks": "^2.8.1",
     "@react-native-community/netinfo": "^9.3.7",
-    "@react-native-firebase/analytics": "16.4.3",
-    "@react-native-firebase/app": "16.4.3",
-    "@react-native-firebase/remote-config": "16.4.3",
     "@react-native-library/photos-picker": "1.1.0",
     "@react-native-library/webserver": "^1.0.3",
     "@react-native-masked-view/masked-view": "^0.2.8",
-    "@react-native-segmented-control/segmented-control": "^2.4.0",
-    "@react-navigation/bottom-tabs": "^6.5.7",
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/native-stack": "^6.9.12",
-    "@react-navigation/stack": "^6.3.16",
+    "@react-native-segmented-control/segmented-control": "^2.4.2",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.17",
     "@rn-kit/sqlite": "^6.0.3",
     "@sentry/react-native": "5.3.0",
     "@shopify/flash-list": "^1.4.3",
@@ -71,8 +68,9 @@
     "i18next": "^22.4.15",
     "iconoir-react-native": "^5.4.0",
     "lodash": "^4.17.21",
-    "lottie-react-native": "^5.1.4",
+    "lottie-react-native": "^5.1.6",
     "mime": "^3.0.0",
+    "mixpanel-react-native": "^2.3.1",
     "mobx": "^6.9.0",
     "mobx-react-lite": "^3.4.3",
     "mobx-state-tree": "^5.1.8",
@@ -84,18 +82,18 @@
     "react-native-actions-sheet": "^0.8.29",
     "react-native-app-toolkit": "^1.1.0",
     "react-native-awesome-slider": "^2.4.0",
-    "react-native-bootsplash": "^4.6.0",
+    "react-native-bootsplash": "^4.7.3",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-classify-image": "^1.2.0",
     "react-native-cloud-store": "^0.9.1",
     "react-native-device-info": "^10.6.0",
-    "react-native-document-picker": "^8.2.0",
+    "react-native-document-picker": "8.2.0",
     "react-native-dynamic-app-icon": "^1.1.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-file-viewer": "^2.1.5",
     "react-native-fs": "2.20.0",
-    "react-native-gesture-handler": "^2.9.0",
-    "react-native-get-random-values": "^1.8.0",
+    "react-native-gesture-handler": "^2.12.0",
+    "react-native-get-random-values": "^1.9.0",
     "react-native-iap": "12.4.9",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-ios-context-menu": "^1.15.1",
@@ -108,11 +106,11 @@
     "react-native-permissions": "^3.8.0",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-quick-sqlite": "6.1.0",
-    "react-native-reanimated": "^3.1.0",
-    "react-native-safe-area-context": "^4.5.2",
-    "react-native-screens": "^3.20.0",
+    "react-native-reanimated": "^3.3.0",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "^3.22.0",
     "react-native-sfsymbols": "^1.2.1",
-    "react-native-shake": "^5.1.1",
+    "react-native-shake": "^5.4.0",
     "react-native-share": "^8.2.0",
     "react-native-svg": "^13.9.0",
     "react-native-version-check": "^3.4.7",
