--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,13 @@
     "regex": "cpp",
     "*.ipp": "cpp",
     "string": "cpp"
-  }
+  },
+  "i18n-ally.localesPaths": [
+    "app/i18n",
+    "ios/Pods/RCT-Folly/folly/lang",
+    "ios/Pods/boost/boost/locale",
+    "ios/Pods/boost/boost/predef/language",
+    "ios/Pods/Headers/Private/RCT-Folly/folly/lang",
+    "ios/Pods/Headers/Public/RCT-Folly/folly/lang"
+  ]
 }
